--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -123,7 +123,7 @@
                                 style="width: 40px; height: 40px"
                             />
                             <span class="d-none d-lg-inline-flex"
-                                >John Doe</span
+                                ></span
                             >
                         </a>
                         <div
